# gorzdrav_bot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  LICENSE  Makefile  README.md  bot.ini.dist  bot_asnwers.py  compose.traefik.yaml  compose.yaml  compose_traefik.yaml  config.py  docker-entrypoint.sh  main.py  pyproject.toml
bot/: bot_asnwers.py
bot/answer_templates/: doctors.html  unknown_appointment.html  unknown_clinic.html
bot/common/: __init__.py  handlers.py
bot/general/: __init__.py  handlers.py
bot/gorzdrav/: __init__.py  handlers.py  states.py
bot/middlewares/: database.py  gorzdrav_api.py
bot/misc/: buttons.py
bot/profile/: __init__.py
bot/services/: appointments_checker.py  set_bot_commands.py
bot/utils/: aio_dialog.py  appointments_checker.py  inline_paginator.py  redis_storage.py  set_bot_commands.py  template_engine.py
common/: __init__.py  handlers.py
database/: database.py  types.py
database/models/: profile.py  tracking.py
gorzdrav/: __init__.py  handlers.py  states.py
gorzdrav/keyboards/: reply.py
gorzdrav_api/: api.py  exceptions.py  schemas.py  shemas.py  utils.py
handlers/: common.py  gorzdrav.py  profile.py
keyboards/inline/: profile.py
migrations/: env.py
migrations/versions/: 11832e1d67da_users.py  aa2f828b847a_init.py  ad13fb3ae5b2_time_range_to_hours.py
misc/: redis_storage.py
models/: gorzdrav.py
models/sqlalchemy/: profile.py
profile/: __init__.py  states.py
profile/handlers/: __init__.py  create_profile.py  manage_profiles.py
profile/keyboards/: reply.py
services/: database.py  gorzdrav_api.py  set_bot_commands.py
src/: __main__.py  config.py  main.py
src/bot/: __init__.py  setup.py
src/database/: __init__.py  database.py  sqlalchemy_types.py  types.py
src/gorzdrav_api/: __init__.py  api.py  exceptions.py  schemas.py  utils.py
utils/: datetime_to_str.py
(+286 files in other folders)
