[tool.poetry]
name = "gorzdrav-bot"
version = "0.1.0"
description = ""
authors = ["KllRaz <kllraz@yandex.ru>"]
readme = "README.md"
packages = [{include = "gorzdrav_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.0"
redis = "^5.0.0"
sqlalchemy = "^2.0.21"
asyncpg = "^0.28.0"
cashews = "^6.2.0"
jinja2 = "^3.1.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
