[tool.poetry]
name = "gorzdrav-bot"
version = "0.1.0"
description = ""
authors = ["KllRaz <kllraz@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.3.0"
redis = "^5.0.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
cashews = "^7.0.0"
jinja2 = "^3.1.3"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
aiogram-dialog = "2.1.0"
alembic = "^1.13.1"
apscheduler = "^3.10.4"
python-dateutil = "^2.8.2"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
types-python-dateutil = "^2.8.19.20240106"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
